[project]
name = "quick-connections"
description = "Quick connections, Circuit board connections"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/niknah/quick-connections"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "quick-connections"
Icon = ""
