[project]
name = "quick-connections"
description = "Quick connections, Circuit board connections"
version = "1.0.17"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/niknah/quick-connections"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "niknah"
DisplayName = "quick-connections"
Icon = ""
